fix in overflow

--- a/style.css
+++ b/style.css
@@ -922,6 +922,7 @@ body {
 
 /* Form section start */
 .form-wrapper {
+  overflow: hidden;
   display: flex;
   justify-content: center;
   background-color: rgb(180, 94, 19);
@@ -1309,6 +1310,7 @@ textarea:focus {
 /* Footer section start */
 .footer-wrapper {
   background-color: rgb(82, 67, 154);
+  overflow: hidden;
 }
 .footer-flex {
   display: flex;
@@ -1377,6 +1379,7 @@ textarea:focus {
   padding: 2rem 10rem;
 }
 .green-wrapper {
+  overflow: hidden;
   display: flex;
   padding: 4rem;
   background-color: rgb(0, 255, 170);
@@ -1579,6 +1582,5 @@ textarea:focus {
     font-size: 0.8rem;
   }
 }
-
 
 /* Footer section end */
